[project]
name = "2025-roadmap-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Austin Pursley", email = "austin.t.pursley@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[project.scripts]
2025-roadmap-python = "2025_roadmap_python:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "nbstripout>=0.8.2",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
